# chainvalidator

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  chainvalidator.py  pyproject.toml  requirements.txt
chainvalidator/: __init__.py  assessor.py  checker.py  cli.py  constants.py  dns_utils.py  dnssec_utils.py  models.py  reporter.py  verdict.py
tests/: conftest.py  test_assessor.py  test_checker.py  test_cli.py  test_constants.py  test_dns_utils.py  test_dnssec_utils.py  test_models.py  test_reporter.py  test_verdict.py
