[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chainvalidator"
version = "0.1.1"
description = "DNSSEC chain-of-trust validator – CLI utility and Python library"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0"
license-files = ["LICENSE"]
authors = [{ name = "t0kubetsu" }]
keywords = [
    "dns",
    "dnssec",
    "dnssec-validation",
    "dnssec-validator",
    "chain-of-trust",
    "trust-anchor",
    "dnskey",
    "ds-record",
    "rrsig",
    "nsec",
    "nsec3",
    "domain-validation",
    "dns-analysis",
    "networking",
    "security",
    "cryptography",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Internet :: Name Service (DNS) :: DNS Utilities",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "dnspython[dnssec]>=2.6",
    "requests>=2.31",
    "rich>=13.7",
    "typer>=0.12",
]

[project.urls]
Homepage = "https://github.com/NC3-TestingPlatform/chainvalidator"
Repository = "https://github.com/NC3-TestingPlatform/chainvalidator"
Issues = "https://github.com/NC3-TestingPlatform/chainvalidator/issues"
Changelog = "https://github.com/NC3-TestingPlatform/chainvalidator/blob/main/CHANGELOG.md"

[project.scripts]
chainvalidator = "chainvalidator.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["chainvalidator*"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=chainvalidator --cov-report=term-missing"
